--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test WD
 
 on:
   workflow_dispatch:
@@ -6,11 +6,6 @@ on:
       deploy-target:
         description: 'select'
         required: true
-        default: 'test1'
-        type: choice
-        options:
-          - test1
-          - test2
 env:
   NODE_VERSION: 16.x
   DEPLOY_TARGET: ${{ github.event.inputs.deploy-target }}
@@ -18,7 +13,6 @@ env:
 
 jobs:
   test1:
-    if: ${{ github.event.inputs.deploy-target == 'test1' }}
     name: deploy test1
     runs-on: ubuntu-latest
     steps:
@@ -36,11 +30,4 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-  test2:
-    if: ${{ github.event.inputs.deploy-target == 'test2' }}
-    name: deploy test2
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo " test2"
-      - run: echo " gg "
 
