workflow dispatch test 3

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,6 +25,15 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+      - run: echo " github.event_name -  ${{ github.event_name }}"
+      - run: echo " runner.os - ${{ runner.os }}"
+      - run: echo " github.ref - ${{ github.ref }}"
+      - run: echo " github.repository - ${{ github.repository }}"
+      - run: echo " github.ref_name - ${{ github.ref_name }}"
+      - run: echo " github.event.inputs.deploy-target - ${{ github.event.inputs.deploy-target }}"
+      - name: Check out repository code - actions/checkout@v3
+        uses: actions/checkout@v3
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
